# TelegramBotAPI

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CMake/: TelegramBotAPIConfig.cmake.in  TelegramBotAPIConfigVersion.cmake.in
